<resources>
    <string name="app_name">Bullseye☃️ </string>
    <string name="instruction">instruction Text</string>
    <string name="instructionText">PUT THE BULLSEYE AS CLOSE AS YOU CAN TO</string>
    <string name="target">target</string>
    <string name="target_value">54</string>
    <string name="seekbar">seekBar</string>
    <string name="lower_limit">lowerLimit</string>
    <string name="_0">0</string>
    <string name="upper_limit">upperLimit</string>
    <string name="_100">100</string>
    <string name="hit_me">Hit Me!</string>
    <string name="result_dialog_message">Target was %1$d.\nYou hit %2$d.\nYour score for this round is %3$d.</string>
    <string name="result_dialog_close_text">close</string>
    <string name="score_label">Score</string>
    <string name="round_label">Round</string>
    <string name="startOver">START OVER</string>
    <string name="info">INFO</string>
    <!-- Alert dialog titles -->
    <string name="alertPerfect">PERFECT😊!!</string>
    <string name="alertAlmost">Almost had it🙌!</string>
    <string name="alertDecent">Decent Try!✨</string>
    <string name="alertSeriously">Are you even trying?!🫥</string>
    <!-- About page text -->
    <string name="about_title_text">🎉 Bullseye 🎉\'</string>
    <string name="about_bullseye_text">This is Bullseye, the game where you can win points and earn fame by dragging a slider.\nYour goal is to place the slider as close as possible to the target value. The closer you are, the more points you score.\nEnjoy!</string>
    <string name="back_button_text">Go Back!</string>
    <string name="about_page_title">About Bullseye</string>
</resources>